# tiny_prng

./: Cargo.toml  README.md  package.json
.github/workflows/: crates-cd.yaml  crates-ci.yaml  npm-cd.yaml  npm-ci.yaml  npm-cicd.yaml  wasm-web-ci.yaml
tiny_prng/: Cargo.toml  README.md
tiny_prng/src/: lib.rs  mt.rs  mt64.rs  pcg.rs  prelude.rs  sfmt.rs  xorshift.rs
wasm_web/: .package.json  Cargo.toml  LICENSE_MIT  Makefile  README.md
wasm_web/demo/src/: index.html  index.js
wasm_web/src/: lib.rs
wasm_web/tests/: web.rs
wasm_web/www/: package.json  webpack.config.js
wasm_web/www/src/: index.js
